--- a/index.html
+++ b/index.html
@@ -436,16 +436,16 @@
 <script>
 
 /* ========= データ ========= */
-const categories=["孤島","草原","雨林","峡谷","捨て地","書庫","その他","ソーシャル"];
+const categories=["孤島","草原","雨林","峡谷","捨てられた地","書庫","その他","ソーシャル"];
 const items=[
-  ["初期エリア","予言者の石窟","水の試練","土の試練","風の試練","火の試練"],
-  ["初期エリア","村","谷","8人エリア","鳥の巣","楽園"],
-  ["初期エリア","小川","神殿前","晴れ間","神殿","ツリーハウス","地下洞窟"],
-  ["初期エリア","陸レース","要塞","空レース","コロセウム","神殿","夢見","隠者","隠者レース"],
-  ["初期エリア","墓地","戦場","蟹エリア","箱舟","秘宝"],
-  ["初期エリア","アーカイブ","避難所","２階","３階","４階","サミット"],
-  ["ホーム","風の街道","星月夜の砂漠","オフィス"],
-  ["シナモン","大キャン4","キャンドル2倍","パン屋","ウニ焼き","闇の欠片"]
+  ["砂丘","予言者の石窟","水の試練","土の試練","風の試練","火の試練"],
+  ["蝶々の住処","草原の村","洞窟","8人エリア","鳥の巣","楽園の島々"],
+  ["開拓地","小川","神殿前","高台広場","神殿","ツリーハウス","地下洞窟"],
+  ["スロープ","陸レース","要塞","空レース","コロセウム","神殿","夢見の町","隠者","隠者レース"],
+  ["倒壊した祠","墓地","戦場","座礁船","箱舟","秘宝"],
+  ["１階","２階","３階","４階","最上部","保存庫","資料庫","星月夜の砂漠","オフィス"],
+  ["花鳥郷","ホーム","シナモン","大キャン4","大キャン4","風の街道"],
+  ["パン屋","パン屋2","ウニ焼き","ウニ焼き2","闇の欠片"]
 ];
 
 const values=[
@@ -454,9 +454,9 @@ const values=[
   [45,227,175,42,83,55,57],
   [104,135,79,150,10,93,100,50,215],
   [65,92,111,63,109,188],
-  [16,50,31,110,12,222,64],
-  [23,30,140,57],
-  [50,200,200,600,300,200]
+  [16,110,12,222,64,31,50,140,57],
+  [23,23,50,200,200,30],
+  [540,540,300,300,200]
 ];
 
 const sundayValues=[
