--- a/index.html
+++ b/index.html
@@ -156,12 +156,15 @@
     left: 50%;
     transform: translateX(-50%);
     bottom: 16px;
-    width: calc(100% - 24px);
+    width: 100%;
     max-width: 960px;
+    padding-left: 22px;
+    padding-right: 22px;
     background: rgba(255,255,255,0.88);
     backdrop-filter: blur(12px);
     border-radius: 20px;
-    padding: 12px 18px 10px;
+    padding-top: 12px;
+    padding-bottom: 10px;
     box-shadow: 0 8px 24px rgba(60,80,150,0.35);
     border: 1px solid rgba(150,170,240,0.9);
     z-index: 1000;
