--- a/index.html
+++ b/index.html
@@ -452,25 +452,26 @@ const items = [
 ];
 
 const values = [
-  [200,50,100,105,200,200],
-  [55,119,45,99,50,299],
-  [45,227,175,42,83,55,57],
-  [104,135,79,150,10,93,100,50,215],
-  [65,92,111,63,109,188],
-  [16,110,12,222,64,31,50,140,57],
-  [23,23,50,200,200,30],
-  [540,540,300,300,200]
+  [200,50,100,105,200,200],           // 孤島（6）
+  [55,119,45,99,50,299],              // 草原（6
+  [45,227,175,42,83,55,57],           // 雨林（7）
+  [104,135,79,150,10,93,100,50,215],  // 峡谷（9）
+  [65,92,111,63,109,188],             // 捨て地（6
+  [16,110,12,222,64,31,50,140,57],    // 書庫（9
+  [23,23,50,200,200,30],              // その他（6）
+  [540,540,300,300,200]               // ソーシャル（5）
+
 ];
 
 const sundayValues = [
-  [0,0,0,0,0,0],
-  [0,0,0,0,0,0],
-  [0,0,0,0,0,0,0],
-  [0,0,0,0,0,0,0,0,0],
-  [86,119,139,101,0,0],
-  [0,0,0,0,0,0,0],
-  [0,0,0,0],
-  [0,0]
+  [200,50,100,105,200,200],           // 孤島（6）
+  [55,119,45,99,50,299],              // 草原（6
+  [45,227,175,42,83,55,57],           // 雨林（7）
+  [104,135,79,150,10,93,100,50,215],  // 峡谷（9）
+  [86,119,139,101,109,188],           // 捨て地（6
+  [16,110,12,222,64,31,50,140,57],    // 書庫（9
+  [23,23,50,200,200,30],              // その他（6）
+  [540,540,300,300,200]               // ソーシャル（5）
 ];
 
 const candleThresholds = [
