--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
     cursor:pointer;
     font-weight:700;
     user-select: none;
+    white-space: nowrap;
     -webkit-user-select: none;
     -ms-user-select: none;
   }
@@ -439,6 +440,22 @@
     .check-wrapper {
       cursor:pointer;
     }
+
+    #resetButton {
+     font-size: 14px;
+    }
+
+    #resetButton::before {
+     content: "リセット";   /* ← スマホ表示 */
+    }
+
+    #resetButton {
+     color: transparent;     /* ← 元の文字を消す */
+    }
+
+    #resetButton::before {
+     color: white;           /* ← 新しい文字を見せる */
+   }
   }
 
   /* タブレット（481〜768px） */
