--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
 
   /* 下側ラベル（黒） */
   #bottomLabelLayer {
-    position:fixed;
-    left:0;
-    top:0;
-    width:100vw;
-    height:100vh;
-    pointer-events:none;
-    z-index:4000;
+    position: absolute;   /* ゲージ内で絶対位置 */
+    left: 0;
+    top: 100%;            /* ゲージのすぐ下 */
+    width: 100%;
+    height: auto;
+    pointer-events: none;
+    z-index: 4000;
   }
   .bottom-gauge-label {
     position:absolute;
@@ -361,9 +361,7 @@
     animation: flashGauge 0.45s ease-out;
   }
 
-  /* ================================
-     🔥 ゲージ：横へ流れるスキャンライト
-     ================================ */
+  /* スキャンライト */
   @keyframes scanLight {
     0% {
       left: -20%;
@@ -397,9 +395,7 @@
     animation: scanLight 0.5s ease-out;
   }
 
-  /* ================================
-     🔥 マーカー（ろうそく）が光る
-     ================================ */
+  /* マーカー（ろうそく）光る */
   @keyframes markerFlash {
     0% {
       filter: brightness(1);
@@ -416,49 +412,46 @@
     animation: markerFlash 0.45s ease-out;
   }
 
-  /* ================================
-     Responsive Layout
-     ================================ */
-
   /* スマホ（〜480px） */
-@media (max-width:480px){
-  .items {
-    grid-template-columns:repeat(2,minmax(0,1fr)) !important;
-  }
+  @media (max-width:480px){
+    .items {
+      grid-template-columns:repeat(2,minmax(0,1fr)) !important;
+    }
 
-  .gauge-top-label{
-    display:none !important;
-  }
-  .daily-list{
-    display:block !important;
-    visibility: visible !important;
-    opacity: 1 !important;
-  }
+    .gauge-top-label{
+      display:none !important;
+    }
+    .daily-list{
+      display:block !important;
+      visibility: visible !important;
+      opacity: 1 !important;
+    }
 
-  .south-bottom-row {
-    justify-content: flex-end;
-    gap: 8px;
-  }
+    .south-bottom-row {
+      justify-content: flex-end;
+      gap: 8px;
+    }
 
-  .check-input {
-    display:none !important;
-  }
-  .check-wrapper {
-    cursor:pointer;
-  }
+    .check-input {
+      display:none !important;
+    }
+    .check-wrapper {
+      cursor:pointer;
+    }
 
-  #resetButton {
-    font-size: 14px;
-    margin-right: 0;     /* ←右の余白完全削除 */
-    white-space: nowrap; /* ←改行させない。重要！ */
-  }
-}
-  #dailyList {
-    white-space: nowrap !important;  /* ← 改行禁止 */
-    display: block !important;       /* ← 表示 */
-    overflow-x: auto;                /* ← 画面狭い場合は横スクロール */
-  }
+    #resetButton {
+      font-size: 14px;
+      margin-right: 0;
+      white-space: nowrap;
+    }
 
+    /* スマホの (16)2268 などを 1 行で */
+    #dailyList {
+      white-space: nowrap !important;
+      display: block !important;
+      overflow-x: auto;
+    }
+  }
 
   /* タブレット（481〜768px） */
   @media (min-width:481px) and (max-width:768px){
@@ -466,7 +459,7 @@
       grid-template-columns:repeat(3,minmax(0,1fr)) !important;
     }
     .gauge-top-label{
-      display:none !重要;
+      display:none !important;
     }
     .daily-list{
       display:none !important;
@@ -513,6 +506,8 @@
       <div id="gaugeMarker">
         <img src="candle.png">
       </div>
+      <!-- ★ 下側ラベルをゲージ内に置く -->
+      <div id="bottomLabelLayer"></div>
     </div>
 
     <div class="south-bottom-row">
@@ -528,9 +523,6 @@
 
 <!-- 上側ラベル -->
 <div id="topLabelLayer"></div>
-<!-- 下側ラベル -->
-<div id="bottomLabelLayer"></div>
-
 
 <script>
 /* ========= データ ========= */
@@ -703,21 +695,16 @@ function getCandleCount(t){
 function updateGauge(c){
   const ratio = c / 20;
 
-  // ゲージ増加時だけ光らせる
   if (c > lastCandles) {
-    // ゲージ本体のフラッシュ
     gaugeFill.classList.add("flash");
     setTimeout(()=>gaugeFill.classList.remove("flash"),450);
 
-    // スキャンライトを左→右へ走らせる
     if (scanLight) {
       scanLight.classList.remove("run");
-      // reflow でアニメーションリセット
       void scanLight.offsetWidth;
       scanLight.classList.add("run");
     }
 
-    // マーカー（ろうそく）を光らせる
     gaugeMarker.classList.add("flash");
     setTimeout(()=>gaugeMarker.classList.remove("flash"),450);
   }
@@ -726,7 +713,7 @@ function updateGauge(c){
   gaugeMarker.style.left = (ratio * 100) + "%";
 }
 
-// スマホの時だけ「全てリセット」を「リセット」に変更
+/* ===== スマホ用：「全てリセット」→「リセット」 ===== */
 function updateResetButtonLabel() {
   const isMobile = window.matchMedia("(max-width: 480px)").matches;
   const btn = document.getElementById("resetButton");
@@ -741,7 +728,6 @@ function updateResetButtonLabel() {
 
 window.addEventListener("load", updateResetButtonLabel);
 window.addEventListener("resize", updateResetButtonLabel);
-
 
 /* ===== パン屋カンスト対応版 updateTotal ===== */
 function updateTotal(){
@@ -834,26 +820,23 @@ function placeTopLabels(){
 /* ===== 下側ラベル ===== */
 function placeBottomLabels(){
   bottomLabelLayer.innerHTML="";
-  const rect=gaugeTrack.getBoundingClientRect();
-  const y=rect.bottom+4;
 
-  const positions={0:0,5:5,10:10,15:15,20:20};
-
-  for(const n in positions){
-    const ratio=positions[n]/20;
-    const px=rect.left+rect.width*ratio;
+  for(const n of [0,5,10,15,20]){
+    const ratio = n / 20;
 
     const label=document.createElement("div");
     label.className="bottom-gauge-label";
     label.textContent=n;
-    label.style.left=px+"px";
-    label.style.top=y+"px";
+
+    // ゲージ幅に対する割合で配置（スクロールしても上下に動かない）
+    label.style.left = (ratio * 100) + "%";
+    label.style.top = "0px";
 
     bottomLabelLayer.appendChild(label);
   }
 }
 
-/* ===== スマホ用更新 ===== */
+/* ===== スマホ用 デイリーリスト ===== */
 function updateDailyList(){
   const list=document.getElementById("dailyList");
   const isMobile=window.matchMedia("(max-width: 480px)").matches;
@@ -922,8 +905,6 @@ window.addEventListener("resize",()=>{
   placeBottomLabels();
   updateDailyList();
 });
-
-
 </script>
 
 </body>
